# CRUD-SOMENDO-NOME-

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING-SCRIPTS.md  FAQ.txt  INSTALL.md  LINKS.md  QUICKSTART.md  README.md
.github/workflows/: bcc-test.yml  publish-build-containers.yml  publish.yml
SPECS/: Dockerfile.fedora  bcc+clang.spec  bcc.spec
cmake/: CmakeUninstall.cmake.in  FindCompilerFlag.cmake  FindKernelHeaders.cmake  FindLibBpf.cmake  FindLibDebuginfod.cmake  FindLibLzma.cmake  FindLuaJIT.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  clang_libs.cmake  version.cmake
debian/: bcc-tools.install  changelog  control  python3-bcc.install  rules
debian/source/: format
docker/: Dockerfile.debian  Dockerfile.ubuntu
docs/: kernel-versions.md  kernel_config.md  reference_guide.md  special_filtering.md  tutorial.md  tutorial_bcc_python_developer.md
examples/: CMakeLists.txt  hello_world.py
examples/cgroupid/: cgroupid.c
examples/cpp/: CGroupTest.cc  CPUDistribution.cc  FollyRequestContextSwitch.cc  HelloWorld.cc  KFuncExample.cc  KModRetExample.cc  LLCStat.cc  RandomRead.cc  RecordMySQLQuery.cc  SkLocalStorageIterator.cc  TCPSendStack.cc  TaskIterator.cc  UseExternalMap.cc
examples/local_storage/: task_storage.py
examples/lua/: bashreadline.c  kprobe-latency.lua  kprobe-write.lua  memleak.lua  offcputime.lua  sock-parse-dns.lua  sock-parse-http.lua  sock-proto.lua  sock-protolen.lua  strlen_count.lua  task_switch.lua  tracepoint-offcputime.lua  uprobe-readline-perf.lua  uprobe-readline.lua  uprobe-tailkt.lua
examples/networking/: CMakeLists.txt  net_monitor.py  simple_tc.py  simulation.py  sockmap.py  tc_perf_event.py
examples/perf/: ipc.py
examples/ringbuf/: ringbuf_output.py
examples/tracing/: biolatpcts.py  bitehist.py  dddos.py  dddos_example.txt  disksnoop.py  disksnoop_example.txt  hello_perf_output.py  hello_perf_output_using_ns.py  kvm_hypercall.py  kvm_hypercall.txt  mallocstacks.py  mysqld_query.py  nflatency.py  nodejs_http_server.py  nodejs_http_server_example.txt  stack_buildid_example.py  stacksnoop.py  stacksnoop_example.txt  strlen_hist.py  strlen_hist_ifunc.py  strlen_snoop.py  sync_timing.py  tcpv4connect.py  tcpv4connect_example.txt  trace_fields.py  trace_perf_output.py  undump.py  urandomread-explicit.py  urandomread.py  urandomread_example.txt  vfsreadlat.py  vfsreadlat_example.txt
examples/usdt_sample/: usdt_sample.md  usdt_sample.sh
introspection/: CMakeLists.txt  bps.c  bps_example.txt
libbpf-tools/: Makefile  Makefile.btfgen  README.md  bashreadline.bpf.c  bashreadline.c  bashreadline.h  bindsnoop.bpf.c  bindsnoop.c  biolatency.bpf.c  biolatency.c  biopattern.bpf.c  biopattern.c  biosnoop.bpf.c  biosnoop.c  biosnoop.h  biostacks.bpf.c  biostacks.c  biostacks.h  biotop.bpf.c  biotop.c  biotop.h  bitesize.bpf.c  bitesize.c  blk_types.h  btf_helpers.c  btf_helpers.h  cachestat.c  capable.bpf.c  capable.c  compat.bpf.h  compat.c  compat.h  core_fixes.bpf.h  cpudist.bpf.c  cpudist.c  cpufreq.bpf.c  cpufreq.c  drsnoop.bpf.c  drsnoop.c  drsnoop_example.txt  (+107 more)
libbpf-tools/arm64/: vmlinux_608.h
libbpf-tools/powerpc/: vmlinux_514.h
libbpf-tools/riscv/: vmlinux_515.h
libbpf-tools/x86/: vmlinux_518.h
man/man8/: argdist.8  bindsnoop.8  biolatency.8  biolatpcts.8  biopattern.8  biosnoop.8  biotop.8  bitesize.8  bps.8  btrfsdist.8  btrfsslower.8  cachestat.8  cachetop.8  capable.8  compactsnoop.8  cpudist.8  cpuunclaimed.8  criticalstat.8  dbslower.8  dbstat.8  dcsnoop.8  deadlock.8  dirtop.8  drsnoop.8  execsnoop.8  exitsnoop.8  ext4dist.8  ext4slower.8  filegone.8  fileslower.8  (+72 more)
scripts/: README.md  bpf_demo.ks.erb  build-deb.sh  build-release-rpm.sh  build-rpm.sh  build_bpf_demo.sh  c-style-check.sh  check-helpers.sh  git-clang-format  git-tag.sh  py-style-check.sh
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/cc/: CMakeLists.txt  README  bcc_btf.cc  bcc_btf.h  bcc_common.cc  bcc_common.h  bcc_debug.cc  bcc_debug.h  bcc_elf.c  bcc_elf.h  bcc_exception.h  bcc_libbpf_inc.h  bcc_perf_map.c  bcc_perf_map.h  bcc_proc.c  bcc_proc.h  bcc_syms.cc  bcc_syms.h  bcc_usdt.h  bcc_zip.c  bcc_zip.h  bpf_module.cc  bpf_module.h  bpf_module_rw_engine.cc  bpffs_table.cc  common.cc  common.h  exported_files.cc  exported_files.h  json_map_decl_visitor.cc  libbpf.c  libbpf.h  perf_reader.c  perf_reader.h  shared_table.cc  syms.h  table_desc.h  table_storage.cc  table_storage.h  table_storage_impl.h  (+1 more)
src/cc/api/: BPF.cc  BPF.h  BPFTable.cc  BPFTable.h  CMakeLists.txt
src/cc/clang/include/: stdarg.h
src/cc/compat/linux/: virtual_bpf.h
src/cc/export/: footer.h  helpers.h  proto.h
src/cc/frontends/clang/: CMakeLists.txt  arch_helper.h  b_frontend_action.cc  b_frontend_action.h  frontend_action_common.h  kbuild_helper.cc  kbuild_helper.h  loader.cc  loader.h  tp_frontend_action.cc  tp_frontend_action.h
src/cc/usdt/: usdt.cc  usdt_args.cc
tests/: wrapper.sh.in
tests/cc/: CMakeLists.txt  catch.hpp  debuginfo_test_lib.cc  dummy_proc_map.txt  test_array_table.cc  test_bpf_table.cc  test_c_api.cc  test_cg_storage.cc  test_hash_table.cc  test_map_in_map.cc  test_parse_tracepoint.cc  test_perf_event.cc  test_pinned_table.cc  test_prog_table.cc  test_queuestack_table.cc  test_shared_table.cc  test_sk_storage.cc  test_sock_table.cc  test_usdt_args.cc  test_usdt_probes.cc  test_zip.cc  utils.cc
tools/: argdist.py  argdist_example.txt  bashreadline.py  bindsnoop.py  bindsnoop_example.txt  biolatency.py  biolatency_example.txt  biolatpcts.py  biolatpcts_example.txt  biopattern.py  biosnoop.lua  biosnoop.py  biosnoop_example.txt  biotop.py  biotop_example.txt  bitesize.py  bitesize_example.txt  bpflist.py  bpflist_example.txt  btrfsdist.py  btrfsdist_example.txt  btrfsslower.py  btrfsslower_example.txt  cachestat.py  cachestat_example.txt  cachetop.py  cachetop_example.txt  capable.py  capable_example.txt  cobjnew.sh  compactsnoop.py  compactsnoop_example.txt  cpudist.py  cpudist_example.txt  cpuunclaimed.py  cpuunclaimed_example.txt  criticalstat.py  criticalstat_example.txt  dbslower.py  dbslower_example.txt  (+164 more)
(+185 files in other folders)
